--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-chromadb==1.3.7
-huggingface-hub==0.36.0
+langchain==1.2.2
+langchain-anthropic==1.3.1
+langchain-pinecone==0.2.13
+langchain-text-splitters==1.1.0
+pinecone==7.3.0
+python-dotenv==1.2.1
 requests==2.32.5
 sentence-transformers==5.2.0
-gradio==6.1.0
-anthropic==0.75.0
